Fix horizontal scrollbar issue in chrome

--- a/src/components/contentSingle/styles.scss
+++ b/src/components/contentSingle/styles.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   min-height: calc(100vh - 72px);
   background-color: white;
   @media screen and (max-width: 1297px) {
